Link to old stats

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     />
 
     <!-- FB Meta Tags -->
-    <meta property="og:url" content="https://dolphin-wordle.glitch.me" />
+    <meta property="og:url" content="https://chigozie.co.uk/dolphin-wordle" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Eeeee" />
     <meta
@@ -42,7 +42,7 @@
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="twitter:domain" content="gootsle.glitch.me" />
+    <meta property="twitter:domain" content="chigozie.co.uk/gootsle" />
     <meta
       property="twitter:image"
       content="https://cdn.glitch.global/cb0019e4-dc4d-4f4e-b64d-6f56cc276bcd/EEEEE.png?v=1643224735315"
@@ -155,6 +155,7 @@
       })();
     </script>
     <script src="script.js"></script>
+    <div>Eeeeeee eee eeee eeee eeee eeeeee eee EEE eeeee? Ee <a href="https://rewordle.glitch.me/oldstats.html">eeee</a></div>
     <game-app></game-app>
   </body>
 </html>
