--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       })();
     </script>
     <script src="script.js"></script>
-    <div>Eeeeeee eee eeee eeee eeee eeeeee eee EEE eeeee? Ee <a href="https://rewordle.glitch.me/oldstats.html">eeee</a></div>
     <game-app></game-app>
+    <div>Eeeeeee eee eeee eeee eeee eeeeee eee EEE eeeee? Ee <a href="https://dolphin-wordle.glitch.me/oldstats.html">eeee</a></div>
   </body>
 </html>
